<resources>
    <string name="app_name">SharedPreferenceDemo</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="load">Load</string>
    <string name="previous">Previous</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_next2">Next2Activity</string>
    <string name="title_activity_next">NextActivity</string>
    <string name="hint">Enter your user name</string>
    <string name="internal_cache">Internal Cache</string>
    <string name="external_cache">External Cache</string>
    <string name="external_private">External Private</string>
    <string name="external_public">External Public</string>
    <string name="data_loaded_status">Data Loaded Status</string>
</resources>
